ref/tel/test/pos/schema-with-flag.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name flag-example

document
  field active flag
  field name string
