ref/tel/test/neg/e211-duplicate-definition.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e213-test

define dup-name
  field x
    scalar string

define dup-name
  field y
    scalar string

document
  field foo
    type dup-name
